[unplanned activities]fix text invisible bug
text not anymore transparent when selected + hover when selected

--- a/MES/WebContent/Sass/components/_stationtracker.scss
+++ b/MES/WebContent/Sass/components/_stationtracker.scss
@@ -1552,3 +1552,13 @@ OTHER
         }
     }
 }
+
+#ImportOswUnplannedPopover--SelectAllUnpd-inner {
+    &.sapMToggleBtnPressed {
+        color: #ffffff !important;
+        background-color: #005483 !important;
+        &:hover {
+            opacity: 0.8;        
+        }
+    }
+}
